# ProjectFE

./: CMakeLists.txt  README.md  main.cpp
include/: constants.h  engine.h  include_SDL.h  ksdl.h  macros.h  map.h  renderer.h  sprite.h  tileset.h  tools.h  types.h
include/entities/: entity.h  stats.h
src/: engine.cpp  ksdl.cpp  map.cpp  renderer.cpp  tools.cpp
src/entities/: entity.cpp
